# ksproject

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: deploy-docs.yml  pypi-release.yml  tests.yml
docs/: index.md
docs/android/: building.md  site-packages.md
docs/configuration/: pyproject-toml.md
docs/getting-started/: new-project.md
docs/ios/: building.md  site-packages.md
docs/overrides/: main.html
docs/plugins/: overview.md
docs/stylesheets/: extra.css
docs/wheelhouse/: building-kivy-wheels.md  overview.md
ksp-bootstraps/: pyproject.toml
ksp-bootstraps/src/ksp_bootstraps/: bootstrap.py
plans/: ksp-docs-cibuildwheel.md  test-suite-plan.md
scripts/: build_python_target.py
src/ksproject/: __init__.py  apple_commands.py  gradle_commands.py  msvc_commands.py
src/ksproject_gui/: app.py  app_hotreload.py
src/ksproject_gui/View/: base_screen.kv  base_screen.py
src/ksproject_gui/View/EntrypointScreen/: entrypoint_screen.kv  entrypoint_screen.py
src/ksproject_gui/View/EntrypointScreen/components/Android/: android.kv
src/ksproject_gui/View/EntrypointScreen/components/Android/components/Home/: home.kv
src/ksproject_gui/View/EntrypointScreen/components/Android/components/Miscellaneous/: miscellaneous.kv  miscellaneous.py
src/ksproject_gui/View/EntrypointScreen/components/Android/components/Permissions/: permissions.kv  permissions.py
src/ksproject_gui/View/EntrypointScreen/components/Android/components/PermissionsModal/: permissionsmodal.kv  permissionsmodal.py
src/ksproject_gui/View/EntrypointScreen/components/Android/components/Services/: services.kv  services.py
src/ksproject_gui/View/EntrypointScreen/components/Android/components/ServicesModal/: servicesmodal.kv  servicesmodal.py
src/ksproject_gui/View/EntrypointScreen/components/Python/: python.kv
src/ksproject_gui/View/EntrypointScreen/components/iOS/components/IMiscellaneous/: imiscellaneous.kv
src/ksproject_gui/View/components/FileUploader/: fileuploader.kv
src/ksproject_gui/View/components/PreviewPane/: previewpane.kv
src/ksproject_gui/View/components/SvgWidget/: __init__.py  svgwidget.py
src/ksproject_gui/libs/: datamodel.py
src/ksproject_utils/: pip_install.py  platforms.py  project_delegate.py  project_init.py  project_init.py.bak  pyproject_init.py  pyproject_toml.py  python_version.py  tools.py
src/ksproject_utils/gradle/: __init__.py  adb.py  android_emulator.py  android_toolchain.py  collect_gradle_configs.py  cpython_android.py  github_actions.py  gradle_build_files.py  gradle_project.py  gradle_project_builder.py  project_init.py
src/ksproject_utils/msvc/: msvc_build_files.py  msvc_project.py  msvc_project_builder.py
src/ksproject_utils/templates/base_app/: __init__.py  app.kv  app.py  app_kv.py  app_py.py
src/ksproject_utils/xcode/: github_actions.py  main_files.py  plist_templates.py  project_spec.py  project_target.py  python_apple.py  setting_presets.py  static_templates.py  xcode_project.py  xcode_project_builder.py  xcodegen_runner.py
src/ksproject_utils/xcode/templates/: KivyLauncher.swift  ios.file
tests/: bootstrap_tests.py  conftest.py
tests/e2e/: test_android_build.py  test_xcode_build.py
tests/fixtures/minimal_app/: pyproject.toml
tests/fixtures/minimal_app/src/minimal_app/: main.py
tests/integration/: test_gradle_build_files.py  test_xcode_builder.py
tests/unit/: test_android_toolchain.py  test_project_target.py  test_pyproject_init_roundtrip.py  test_pyproject_toml.py  test_setting_presets.py
trash/: __gradle_project_builder.py  gradle_build_files.py  xcode_project_builder.py
