[project]
name = "ksproject"
version = "0.0.1"
description = "Compile python apps for Android and iOS."
readme = "README.md"
authors = [
    { name = "kivyschool" }
]
urls = { "Homepage" = "https://kivy-school.github.io/ksproject" }
requires-python = ">=3.13"
dependencies = [
    "kivy",
    #"kivy-reloader[desktop]",
    "toml>=0.10.2",
    "pyyaml>=6.0",
    
]

[project.scripts]
ksproject = "ksproject:main"
ksproject-gui = "ksproject_gui:main"

[project.optional-dependencies]
gui = [
    "carbonkivy",
    "thorvg-cython",
    "watchdog",
    "pyobjc; sys_platform == 'darwin'",
]

full = [
    "carbonkivy",
    "thorvg-cython",
    "kaki",
    "watchdog",
    "pyobjc; sys_platform == 'darwin'",
]

[tool.uv.sources]
carbonkivy = { git = "https://github.com/CarbonKivy/CarbonKivy", rev = "master" }

[tool.uv.build-backend]
module-name = ["ksproject", "ksproject_gui", "ksproject_utils"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow / heavy (real builds, emulator, simulator)",
    "android: marks tests that exercise the Android/gradle pipeline",
    "apple: marks tests that exercise the Apple/Xcode pipeline",
    "emulator: marks tests that require booting an Android emulator (set KSPROJECT_RUN_EMULATOR=1)",
    "simulator: marks tests that require the iOS Simulator (macOS only)",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
