[project]
name = "ksproject"
version = "0.0.1"
description = "Compile python apps for Android and iOS."
readme = "README.md"
authors = [
    { name = "kivyschool" }
]
urls = { "Homepage" = "https://kivy-school.github.io/ksproject" }
requires-python = ">=3.13"
dependencies = [
    "toml>=0.10.2",
    "pyyaml>=6.0",
    "ksp-bootstraps",
]

[project.scripts]
ksproject = "ksproject:main"



[tool.uv.build-backend]
module-name = [
    "ksproject",
    "ksproject_utils"
]

# Provide metadata for the studio git dependency so uv does NOT download/build it
# during universal resolution (uv lock resolves all extras/groups). Without this,
# every `uv sync` and test run tries to build ksproject-studio. It is only actually
# fetched/built when the `studio` extra is explicitly installed (`ksproject[studio]`).
[[tool.uv.dependency-metadata]]
name = "ksproject-studio"
version = "0.0.1"

[tool.uv.sources]
ksproject-studio = { git = "http://github.com/kivy-school/ksproject-studio" }
ksp-bootstraps = { path = "../ksp-bootstraps", editable = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
]


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: marks tests as slow / heavy (real builds, emulator, simulator)",
    "android: marks tests that exercise the Android/gradle pipeline",
    "apple: marks tests that exercise the Apple/Xcode pipeline",
    "emulator: marks tests that require booting an Android emulator (set KSPROJECT_RUN_EMULATOR=1)",
    "simulator: marks tests that require the iOS Simulator (macOS only)",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
