[project]
name = "minimal_app"
version = "0.0.1"
requires-python = ">=3.13"
dependencies = [
    "kivy>=2.3.1",
]

[tool.uv]
index-strategy = "unsafe-best-match"
find-links = ["./wheelhouse"]

[tool.uv.pip]
extra-index-url = [
    "https://pypi.anaconda.org/pyswift/simple",
    "https://pypi.anaconda.org/kivyschool/simple",
]
find-links = ["./wheelhouse"]

[tool.kivy-school]
app_name = "MinimalApp"

[tool.kivy-school.android]
package_name = "org.example.minimal_app"
archs = ["arm64-v8a"]
api = 36
min_api = 24
sdk = "36"
ndk = "28c"
ndk_api = 24
global_tools = false

[tool.kivy-school.ios]
bundle_id = "org.example.minimal_app"
info_plist = {}
entitlements = {}
permissions = []
frameworks = []

[tool.kivy-school.macos]
bundle_id = "org.example.minimal_app"
info_plist = {}
entitlements = {}
